...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <ImageView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/logout"
        android:padding="20dp"
        android:clickable="true"
...
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:background="@android:color/transparent"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/add_item"
            android:paddingVertical="7dp"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:paddingStart="6dp"
            android:background="@drawable/filter_border">
            <Spinner
                android:id="@+id/spinner_sort_options"
                android:layout_width="110dp"
                android:layout_height="34dp"
                android:dropDownSelector="@drawable/spinner_bg"
                android:popupBackground="@drawable/spinner_bg"
                android:spinnerMode="dropdown"
                app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintTop_toBottomOf="@id/items_count_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line2"/>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toTopOf="@id/line2"
...
        app:layout_constraintStart_toStartOf="parent">
    </TextView>
    <LinearLayout
        android:id="@+id/action_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/delete_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
...
